Fix: changed scrollbar to hide on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -142,6 +142,14 @@ input[type="number"]::-webkit-outer-spin-button {
   background: linear-gradient(180deg, #37ffff,#ff3298 );
 }
 
+/* Hide scrollbar on mobile */
+@media (max-width: 768px) {
+  /* For Chrome, Safari, and Opera */
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 /* ■■■■­■■­■■­■■­■■ Home page ■■■■­■■­■■­■■­■■ */
 
 .trans-red-bg {
